[project]
name = "friendly-arrow-sql"
version = "0.0.1"
authors = [
  { name="Jakub Cierocki", email="jcierocki@gmail.com" },
]
description = "An user-friendly Python package (wrapping ADBC) for communicating with SQL databases using pyarrow directly"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "adbc-driver-manager~=0.11.0",
    "adbc-driver-postgresql~=0.11.0",
    "pyarrow~=16.0.0"
]

[project.optional-dependencies]
sqlite = [
    "adbc-driver-sqlite~=0.11.0"
]
flightsql = [
    "adbc-driver-flightsql~=0.11.0"
]
connectorx = [
    "connectorx~=0.3.2"
]
all = [
    "adbc-driver-sqlite~=0.11.0",
    "adbc-driver-flightsql~=0.11.0",
    "connectorx~=0.3.2"
]

[project.urls]
Homepage = "https://gitlab.com/jcierocki-personal-projects/friendly-arrow-sql"
Issues = "https://gitlab.com/jcierocki-personal-projects/friendly-arrow-sql/-/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    ".venv-prod/",
    "*.db"
]